--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>送信完了</title>
-  <meta http-equiv="refresh" content="3; URL=index.html">
+  <meta http-equiv="refresh" content="3;URL=https://shortcut2323.github.io/waiting-time/index.html">
 </head>
 <body>
   <p>送信ありがとうございました。まもなくフォームに戻ります。</p>
