--- a/thanks.html
+++ b/thanks.html
@@ -2,10 +2,34 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>送信完了</title>
-  <meta http-equiv="refresh" content="3;URL=https://shortcut2323.github.io/waiting-time/index.html">
+  <title>お化け屋敷入場フォーム</title>
+  <script>
+    let submitted = false;
+
+    function checkFormSubmission() {
+      const iframe = document.getElementById('formFrame');
+      if (submitted) return;
+      const currentUrl = iframe.contentWindow.location.href;
+      // 完了画面のURLに含まれるパターンを検出
+      if (currentUrl.includes('formResponse')) {
+        submitted = true;
+        console.log("送信完了検出！");
+        // 数秒後にリロード（または別の画面に遷移）
+        setTimeout(() => {
+          iframe.src = iframe.src;
+          submitted = false;
+        }, 4000); // 4秒待ってリロード
+      }
+    }
+
+    setInterval(checkFormSubmission, 1000); // 1秒ごとにチェック
+  </script>
 </head>
 <body>
-  <p>送信ありがとうございました。まもなくフォームに戻ります。</p>
+  <iframe
+    id="formFrame"
+    src="https://docs.google.com/forms/d/e/1FAIpQLSdaeGF8fBNQSycYzHNJa8EEAwPbm5-iq3jFAUfJa3XBLbY0Mg/viewform?embedded=true"
+    width="640" height="800" frameborder="0"
+  ></iframe>
 </body>
 </html>
