--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
   <meta charset="UTF-8">
   <title>お化け屋敷入場フォーム</title>
   <script>
-    function reloadFormIfSubmitted() {
+    let submitted = false;
+
+    function checkFormSubmission() {
       const iframe = document.getElementById('formFrame');
-      try {
-        const currentURL = iframe.contentWindow.location.href;
-        if (currentURL.includes('formResponse')) {
-          // フォーム送信完了後だけリロード（5秒後）
-          setTimeout(() => {
-            iframe.src = iframe.src;
-          }, 3000); // 少し早く戻すなら3秒でもOK
-        }
-      } catch (e) {
-        // cross-origin のためにエラーになることもあるが無視
+      if (submitted) return;
+      const currentUrl = iframe.contentWindow.location.href;
+      // 完了画面のURLに含まれるパターンを検出
+      if (currentUrl.includes('formResponse')) {
+        submitted = true;
+        console.log("送信完了検出！");
+        // 数秒後にリロード（または別の画面に遷移）
+        setTimeout(() => {
+          iframe.src = iframe.src;
+          submitted = false;
+        }, 4000); // 4秒待ってリロード
       }
     }
+
+    setInterval(checkFormSubmission, 1000); // 1秒ごとにチェック
   </script>
 </head>
 <body>
@@ -25,7 +30,6 @@
     id="formFrame"
     src="https://docs.google.com/forms/d/e/1FAIpQLSdaeGF8fBNQSycYzHNJa8EEAwPbm5-iq3jFAUfJa3XBLbY0Mg/viewform?embedded=true"
     width="640" height="800" frameborder="0"
-    onload="reloadFormIfSubmitted()"
   ></iframe>
 </body>
 </html>
