--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <iframe
     id="formFrame"
-    src="https://docs.google.com/forms/d/e/【あなたのフォームID】/viewform?embedded=true"
+    src="https://docs.google.com/forms/d/e/1FAIpQLSdaeGF8fBNQSycYzHNJa8EEAwPbm5-iq3jFAUfJa3XBLbY0Mg/viewform?usp=dialog"
     width="640" height="800" frameborder="0"
     onload="reloadForm()"
   ></iframe>
